--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <head>
   <title>Environmental Problems-main</title>
   <meta charset="utf-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123650625-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-123650625-1');
+  </script>
 </head>
 <body>
   <h1>Environmental Problems</h1>
